--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-
-
-    <title>Display Property</title>
+    <title>Moving Balls</title>
 </head>
 <body>
+    <div class="mainDiv">
+        <div id="RedR" class="Redc"></div>>
+        <div id="YellowR" class="Yellowc"></div>
+        <div id="GreenR"class="Greenc"></div>       
+    </div>
     
-<div class="mainDiv">
-<div class="red"></div>
-<div class="yellow"></div>
-<div class="green"></div>
 </body>
 </html>
